# yt_content_fetcher

./: .gitignore  downloaded.txt  pyproject.toml
src/yt_downloader/: downloaded.txt  main.py
