[project]
name = "yt-downloader"
version = "0.1.0"
description = ""
authors = [
    {name = "LangaLee",email = "langa4749@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "yt-dlp (>=2025.9.5,<2026.0.0)"
]

[tool.poetry]
packages = [{include = "yt_downloader", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
